force-app/main/default/objects/clofor_com_cfs__VATCash__c/fields/clofor_com_cfs__AmountBuyingInclTaxCash__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountBuyingInclTaxCash__c</fullName>
    <label>AMOUNT BUYING INCL TAX-CASH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>