force-app/main/default/objects/clofor_com_cfs__VATCash__c/fields/clofor_com_cfs__VATInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvoiceID__c</fullName>
    <label>VAT INVOICE ID</label>
    <referenceTo>clofor_com_cfs__VAT_INVOICE__c</referenceTo>
    <relationshipLabel>VAT+CASH</relationshipLabel>
    <relationshipName>VATCash</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>