force-app/main/default/objects/clofor_com_cfs__VATCash__c/fields/clofor_com_cfs__VATInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__VATInvoiceNo__c</fullName>
    <formula>clofor_com_cfs__VATInvoiceID__r.clofor_com_cfs__RED_INVOICE_NO__c</formula>
    <label>VAT INVOICE NO</label>
    <type>Text</type>
</CustomField>